--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-ticker-input",
   "version": "0.1.0",
-  "private": true,
+  "description": "A minimal reactjs package to render a number input with ticker selectors. 🔥🔥",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -12,6 +12,26 @@
     "sass": "^1.55.0",
     "web-vitals": "^2.1.4"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/arnavozil/react-ticker-input"
+  },
+  "keywords": [
+    "reactjs",
+    "input",
+    "ticker",
+    "number-input",
+    "react-input",
+    "select",
+    "react-select"
+  ],
+  "author": "Arnav Panwar <arnavpanwar99@gmail.com> (https://github.com/arnavozil)",
+  "license": "MIT",
+  "bugs": {
+    "email": "arnavpanwar99@gmail.com",
+    "url": "https://github.com/arnavozil/react-ticker-input/issues"
+  },
+  "homepage": "https://github.com/arnavozil/react-ticker-input#readme",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
